lawncare technician added

--- a/skillmatch/templates/authentication_app/index.html
+++ b/skillmatch/templates/authentication_app/index.html
@@ -76,20 +76,24 @@
 
 
             <!-- Lumber Jack -->
-            
+            <a href="{% url 'lumberjack' %}">
             <div class="category-card">
                 <i class="fa-solid fa-tree"></i>
                 <h3>Lumber Jack</h3>
                 <p>Expert tree cutting and wood services for your needs.</p>
             </div>
+            </a>
             
         
             <!-- Lawn Care Technician -->
+            <a href="{% url 'lawncare' %}">
             <div class="category-card">
                 <i class="fa-solid fa-leaf"></i>
                 <h3>Lawn Care Technician</h3>
                 <p>Keep your lawn healthy and beautiful with professional service.</p>
             </div>
+            </a>
+        
         
             <!-- Well Digger -->
             <div class="category-card">
