--- a/skillmatch/templates/base/base.html
+++ b/skillmatch/templates/base/base.html
@@ -232,7 +232,7 @@
             <ul>
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="{% url 'contact' %}">Contact</a></li>
                 {% if request.user.is_authenticated %}
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
