--- a/skillmatch/templates/authentication_app/index.html
+++ b/skillmatch/templates/authentication_app/index.html
@@ -96,26 +96,32 @@
         
         
             <!-- Well Digger -->
+            <a href="{% url 'welldigger' %}">
             <div class="category-card">
                 <i class="fa-solid fa-water"></i>
                 <h3>Well Digger</h3>
                 <p>Reliable well drilling and water supply services.</p>
             </div>
-        
+            </a>
             <!-- Plant Keeper -->
+            <a href="{% url 'plantkeeper' %}">
             <div class="category-card">
                 <i class="fa-solid fa-seedling"></i>
                 <h3>Plant Keeper</h3>
                 <p>Expert plant care services to maintain your greenery.</p>
             </div>
+            </a>
         
             <!-- Welder -->
+            <a href="{% url 'welder' %}">
             <div class="category-card">
                 <i class="fa-solid fa-tools"></i>
                 <h3>Welder</h3>
                 <p>Quality welding services for construction, repairs, and more.</p>
             </div>
-        </div>        
+            </a>
+        </div>
+
     </section>
 
 {% endblock content %}
